--- a/style.css
+++ b/style.css
@@ -51,6 +51,15 @@ a{
     margin-left: auto;
 }
 
+/* COVER */
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+
 
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
